tests/structs/struct_in_fun_error.june
// error: unknown type

fun foo() {
    struct Employee {
        name: c_string,
        age: i64,
    }
}

let employee = new Employee(name: c"Bob", age: 123)
println(employee.age)
